--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18",
     "tailwindcss": "^3.4.3",
     "postcss": "^8",
-    "autoprefixer": "^10"
+    "autoprefixer": "^10",
+    "@react-google-maps/api": "^2.19.3",
+    "react-big-calendar": "^1.12.2",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "typescript": "^5",
